Fix TA section overlap on mobile

--- a/static/responsive.css
+++ b/static/responsive.css
@@ -31,10 +31,6 @@
 		font-size: 13pt;
 	}
 
-	#my-papers {
-		height: 285px;
-	}
-
 	#my-courses {
 		height: 330px;
 	}
